WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268058
airbnb.com: When trying to select days for checkin checkout, the date widget is empty
https://bugs.webkit.org/show_bug.cgi?id=268058
Summary
airbnb.com: When trying to select days for checkin checkout, the date widget ...
Karl Dubost
Reported
2024-01-24 21:19:52 PST
Steps to reproduce: * With STP186 * Go to
https://www.airbnb.com/rooms/809311267036452176
* at the bottom right there is a widget to check in and check out * Click on the check in * a Calendar Widget appears Result: The days are not populated and there is a blank area instead of the days. On Firefox the days appear. This seems to be a requestIdleCallback issue.
Attachments
Add attachment
proposed patch, testcase, etc.
Karl Dubost
Comment 1
2024-01-24 21:20:27 PST
rdar://121518509
Ryosuke Niwa
Comment 2
2024-03-29 21:42:39 PDT
***
Bug 268152
has been marked as a duplicate of this bug. ***
Ryosuke Niwa
Comment 3
2024-03-29 22:21:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26641
EWS
Comment 4
2024-03-31 14:12:40 PDT
Committed
276866@main
(ecd009129377): <
https://commits.webkit.org/276866@main
> Reviewed commits have been landed. Closing PR #26641 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug