Source/WebCore/dom/IdleCallbackController.cpp
@@ -60,7 +60,8 @@ int IdleCallbackController::queueIdleCallback(Ref<IdleRequestCallback>&& callbac
                 weakThis->invokeIdleCallbackTimeout(handle);
             });
         });
-    }
+    } else if (RefPtr page = m_document ? m_document->page() : nullptr)
+        m_document->protectedWindowEventLoop()->scheduleIdlePeriod(*page);
 
     return handle;
 }
